--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                     <input type="password" name="password" id="password" placeholder="password">
                     <p class="error" id="password-error"></p>
                 </li>
+                <li>
+                    <label for="confirm-password">Confirm Password</label>
+                    <input type="password" name="password" id="password" placeholder="confirm_password">
+                    <p class="error" id="confirm-password-error"></p>
+                </li>
             </ul>
             <ul class="check-input">
                 <li>
