--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                     <input type="checkbox" name="terms" id="terms">
-                    <label for="terms">I agree to all the Terms of Use</label>
+                    <label for="terms">I agree to the terms and conditions</label>
                     <p class="error" id="terms-error"></p>
                 </li>
             </ul>
