--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Project 1</title>
     <meta charset="UTF-8">
@@ -11,59 +12,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="assets/js/site.js" async></script>
 </head>
+
 <body>
-<header>
-
-</header>
-<main>
-    <section class="overlay">
-        <form class="sign-in" method="get" action="#null" autocomplete="on">
-            <!-- Full Name, Username, Email, Password, Marketing email checkbox, Terms of use checkbox -->
-            <h2>Sign Up</h2>
-            <ul class="text-input">
-                <li>
-                    <label for="full-name">Full Name</label>
-                    <input type="text" name="full-name"  id="full-name" placeholder="Sufyan Khan" required = "required" pattern = "[A-Z,a-z]{3,}" title = "Use Only Alphabets">
-                    <p class="error" id="full-name-error"></p>
-                </li>
-                <li>
-                    <label for="user-name">User Name</label>
-                    <input type="text" name="user-name" id="user-name" placeholder="user_name">
-                    <p class="error" id="user-name-error"></p>
-                </li>
-                <li>
-                    <label for="email">Email</label>
-                    <input type="text" name="email" id="email" placeholder="xxxx@example.com" required>
-                    <p class="error" id="email-error"></p>
-                </li>
-                <li>
-                    <label for="password">Password</label>
-                    <input type="password" name="password" id="password" placeholder="password">
-                    <p class="error" id="password-error"></p>
-                </li>
-                <li>
-                    <label for="confirm-password">Confirm Password</label>
-                    <input type="password" name="password" id="password" placeholder="confirm_password">
-                    <p class="error" id="confirm-password-error"></p>
-                </li>
-            </ul>
-            <ul class="check-input">
-                <li>
-                    <input type="checkbox" name="marketing" id="marketing">
-                    <label for="marketing">Yes, I want to receive additional info and marketing emails</label>
-                </li>
-                <li>
-                    <input type="checkbox" name="terms" id="terms">
-                    <label for="terms">I agree to the terms and conditions</label>
-                    <p class="error" id="terms-error"></p>
-                </li>
-            </ul>
-            <button>Create Account</button>
-        </form>
-    </section>
-</main>
-<footer>
-
-</footer>
+    <header> </header>
+    <main>
+        <section class="overlay">
+            <form class="sign-in" method="get" action="#null" autocomplete="on">
+                <!-- Full Name, Username, Email, Password, Marketing email checkbox, Terms of use checkbox -->
+                <h2>Sign Up</h2>
+                <ul class="text-input">
+                    <li> <label for="full-name">Full Name</label> <input type="text" name="full-name" id="full-name" placeholder="Sufyan Khan" required="required" pattern="[A-Z,a-z]{3,}" title="Use Only Alphabets">
+                        <p class="error" id="full-name-error"></p>
+                    </li>
+                    <li> <label for="user-name">User Name</label> <input type="text" name="user-name" id="user-name" placeholder="user_name">
+                        <p class="error" id="user-name-error"></p>
+                    </li>
+                    <li> <label for="email">Email</label> <input type="text" name="email" id="email" placeholder="xxxx@example.com" required>
+                        <p class="error" id="email-error"></p>
+                    </li>
+                    <li> <label for="password">Password</label> <input type="password" name="password" id="password" placeholder="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="You Must have one number and one lowercase and uppercase letter, and around 7 to 8 characters" required>
+                        <p class="error" id="password-error"></p>
+                    </li>
+                    <li> <label for="confirm-password">Confirm Password</label> <input type="text" name="confirm" id="confirm-password" placeholder="confirm_password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="You Must have one number and one lowercase and uppercase letter, and around 7 to 8 characters" required>
+                        <p class="error" id="confirm-password-error"></p>
+                    </li>
+                </ul>
+                <ul class="check-input">
+                    <li> <input type="checkbox" name="marketing" id="marketing"> <label for="marketing">Yes, I want to receive additional info and marketing emails</label> </li>
+                    <li> <input type="checkbox" name="terms" id="terms"> <label for="terms">I agree to the terms and conditions</label>
+                        <p class="error" id="terms-error"></p>
+                    </li>
+                </ul> <button>Create Account</button>
+            </form>
+        </section>
+    </main>
+    <footer> </footer>
 </body>
+
 </html>
