--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li> <label for="password">Password</label> <input type="password" name="password" id="password" placeholder="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="You Must have one number and one lowercase and uppercase letter, and around 7 to 8 characters" required>
                         <p class="error" id="password-error"></p>
                     </li>
-                    <li> <label for="confirm-password">Confirm Password</label> <input type="text" name="confirm" id="confirm-password" placeholder="confirm_password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="You Must have one number and one lowercase and uppercase letter, and around 7 to 8 characters" required>
+                    <li> <label for="confirm-password">Confirm Password</label> <input type="password" name="confirm" id="confirm-password" placeholder="confirm_password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="You Must have one number and one lowercase and uppercase letter, and around 7 to 8 characters" required>
                         <p class="error" id="confirm-password-error"></p>
                     </li>
                 </ul>
