--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!-- Full Name, Username, Email, Password, Marketing email checkbox, Terms of use checkbox -->
                 <h2>Sign Up</h2>
                 <ul class="text-input">
-                    <li> <label for="full-name">Full Name</label> <input type="text" name="full-name" id="full-name" placeholder="Sufyan Khan" required="required" pattern="[A-Z,a-z]{3,}" title="Use Only Alphabets">
+                    <li> <label for="full-name">Full Name</label> <input type="text" name="full-name" id="full-name" placeholder="Sufyan Khan">
                         <p class="error" id="full-name-error"></p>
                     </li>
                     <li> <label for="user-name">User Name</label> <input type="text" name="user-name" id="user-name" placeholder="user_name">
