--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Project 1</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="assets/css/reset.css" rel="stylesheet" media="screen">
+    <link href="assets/css/meyers_and_normalize-form_reset.css" rel="stylesheet" media="screen">
     <link href="assets/css/screen.css" rel="stylesheet" media="screen">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
